--- a/ChatClient/App.xaml
+++ b/ChatClient/App.xaml
@@ -1,7 +1,8 @@
 ﻿<Application x:Class="ChatClient.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:ChatClient">
+             xmlns:local="clr-namespace:ChatClient"
+             xmlns:sys="clr-namespace:System;assembly=mscorlib">
     <Application.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
@@ -14,7 +15,8 @@
                 <ResourceDictionary Source="Resources/PasswordBox.xaml"/>
                 <ResourceDictionary Source="Resources/ContentControl.xaml"/>
                 <ResourceDictionary Source="Resources/Menu.xaml"/>
-                <ResourceDictionary Source="Resources/Toolbar.xaml"/>
+                <ResourceDictionary Source="Resources/ToolBar.xaml"/>
+                <ResourceDictionary Source="Resources/ScrollBar.xaml"/>
 
                 <ResourceDictionary Source="Resources/Images/Send.xaml"/>
                 <ResourceDictionary Source="Resources/Images/Mute.xaml"/>
@@ -23,6 +25,7 @@
                 <ResourceDictionary Source="pack://application:,,,/ChatClient;component/Resources/Images/Settings.xaml"/>
                 <ResourceDictionary Source="pack://application:,,,/ChatClient;component/Resources/Images/CloseTab.xaml"/>
             </ResourceDictionary.MergedDictionaries>
+            <sys:Double x:Key="{x:Static SystemParameters.HorizontalScrollBarHeightKey}">50</sys:Double>
         </ResourceDictionary>
     </Application.Resources>
 </Application>
