--- a/ChatClient/Resources/ListBox.xaml
+++ b/ChatClient/Resources/ListBox.xaml
@@ -10,6 +10,8 @@
         <ResourceDictionary Source="pack://application:,,,/ChatClient;component/Resources/Images/ThreeDots.xaml"/>
         <ResourceDictionary Source="pack://application:,,,/ChatClient;component/Resources/Images/MessageStatus.xaml"/>
         <ResourceDictionary Source="Menu.xaml"/>
+        <ResourceDictionary Source="ToolBar.xaml"/>
+        <ResourceDictionary Source="ScrollBar.xaml"/>
     </ResourceDictionary.MergedDictionaries>
 
     <converters:MessageLineNormalizeConverter x:Key="normalizedMessage"/>
@@ -272,7 +274,7 @@
 
     <Style x:Key="messagesListBox" TargetType="{x:Type ListBox}" BasedOn="{StaticResource usersListBox}">
         <Setter Property="ItemsSource" Value="{Binding CurrentChatGroup.Messages}"/>
-        <Setter Property="ScrollViewer.HorizontalScrollBarVisibility" Value="Hidden"/>
+        <Setter Property="ScrollViewer.HorizontalScrollBarVisibility" Value="Disabled"/>
         <Setter Property="ScrollViewer.VerticalScrollBarVisibility" Value="Auto"/>
         <Setter Property="Background" Value="{StaticResource mainMessageBoxColors}"/>
         <Setter Property="BorderThickness" Value="0,1,0,1"/>
@@ -281,9 +283,10 @@
                 <ControlTemplate>
                     <extensions:ScrollViewerExtension MessageCollection="{Binding RelativeSource={RelativeSource AncestorType={x:Type ListBox}}
                             ,Path=ItemsSource}"
-                                                      MessageHeight="0"
                                                       AlwaysScrollToEnd="{Binding  Source=True, AsyncState=True}"
-                                                      Background="{StaticResource mainMessageBoxColors}">
+                                                      Background="{StaticResource mainMessageBoxColors}"
+                                                      HorizontalScrollBarVisibility="Disabled"
+                                                      Template="{StaticResource scrollViewerControlTemplate}">
                         <ItemsPresenter/>
                     </extensions:ScrollViewerExtension>
                 </ControlTemplate>
@@ -303,16 +306,6 @@
                                             <Binding Path="."/>
                                             <Binding ElementName="stackPanel"/>
                                             <Binding RelativeSource="{RelativeSource AncestorType={x:Type ListBox}}"/>
-                                        </MultiBinding>
-                                    </i:InvokeCommandAction.CommandParameter>
-                                </i:InvokeCommandAction>
-                            </i:EventTrigger>
-                            <i:EventTrigger EventName="SizeChanged">
-                                <i:InvokeCommandAction Command="{Binding RelativeSource={RelativeSource AncestorType={x:Type UserControl}}
-                                            , Path=DataContext.ElementLoadedCommand}">
-                                    <i:InvokeCommandAction.CommandParameter>
-                                        <MultiBinding Converter="{StaticResource multiBindingConverter}">
-                                            <Binding ElementName="stackPanel"/>
                                         </MultiBinding>
                                     </i:InvokeCommandAction.CommandParameter>
                                 </i:InvokeCommandAction>
@@ -364,7 +357,8 @@
                                        MaxWidth="{Binding RelativeSource={RelativeSource AncestorType={x:Type ScrollViewer}}, Path=ActualWidth
                                                 , Converter={StaticResource normalizedMessage}}"
                                        TextWrapping="Wrap"
-                                       HorizontalAlignment="Left"/>
+                                       HorizontalAlignment="Left"
+                                       VerticalAlignment="Top"/>
                         </StackPanel>
                     </StackPanel>
                 </DataTemplate>
