--- a/ChatClient/Views/AdditionalViews/BindablePasswordBox.xaml
+++ b/ChatClient/Views/AdditionalViews/BindablePasswordBox.xaml
@@ -8,6 +8,7 @@
              d:DesignHeight="450" d:DesignWidth="800">
 
     <PasswordBox x:Name="passwordBox" 
-                 PasswordChanged="PasswordBox_PasswordChanged" BorderThickness="0">
+                 PasswordChanged="PasswordBox_PasswordChanged" BorderThickness="0"
+                 MaxLength="20">
     </PasswordBox>
 </UserControl>
