--- a/ChatClient/Resources/Button.xaml
+++ b/ChatClient/Resources/Button.xaml
@@ -361,6 +361,7 @@
         <Setter Property="HorizontalAlignment" Value="Right"/>
         <Setter Property="Width" Value="90"/>
         <Setter Property="Height" Value="35"/>
+        <Setter Property="Margin" Value="10,0,10,0"/>
         <Setter Property="Content" Value="Change"/>
         <Setter Property="Focusable" Value="False"/>
         <Setter Property="Template">
@@ -383,6 +384,13 @@
                 </ControlTemplate>
             </Setter.Value>
         </Setter>
+    </Style>
+
+    <Style x:Key="changeUserSettingsButton" TargetType="{x:Type Button}" BasedOn="{StaticResource changeFieldButton}">
+        <Setter Property="Margin" Value="5,5,5,15"/>
+        <Setter Property="Height" Value="35"/>
+        <Setter Property="Width" Value="80"/>
+        <Setter Property="FontSize" Value="20"/>
     </Style>
 
 </ResourceDictionary>
