--- a/ChatClient/Resources/TextBlock.xaml
+++ b/ChatClient/Resources/TextBlock.xaml
@@ -52,11 +52,23 @@
         <Setter Property="Margin" Value="5,5,0,-10"/>
     </Style>
 
+    <Style x:Key="changeUserSettingsTextBlock" TargetType="{x:Type TextBlock}" BasedOn="{StaticResource settingsField}">
+        <Setter Property="Margin" Value="20,5,20,5"/>
+        <Setter Property="Foreground" Value="Black"/>
+        <Setter Property="FontSize" Value="20"/>
+    </Style>
+
     <Style x:Key="settingsInsideField" TargetType="{x:Type TextBlock}">
         <Setter Property="Foreground" Value="Black"/>
         <Setter Property="FontSize" Value="22"/>
         <Setter Property="VerticalAlignment" Value="Center"/>
         <Setter Property="Margin" Value="5"/>
+    </Style>
+
+    <Style x:Key="title" TargetType="{x:Type TextBlock}">
+        <Setter Property="HorizontalAlignment" Value="Center"/>
+        <Setter Property="VerticalAlignment" Value="Center"/>
+        <Setter Property="FontSize" Value="24"/>
     </Style>
 
 </ResourceDictionary>
