--- a/ChatClient/Resources/TextBox.xaml
+++ b/ChatClient/Resources/TextBox.xaml
@@ -1,6 +1,40 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
 
+    <ControlTemplate x:Key="validationTemplate" TargetType="{x:Type Control}">
+        <DockPanel LastChildFill="True">
+            <Border>
+                <Border.Style>
+                    <Style TargetType="{x:Type Border}">
+                        <Setter Property="DockPanel.Dock" Value="Right"/>
+                        <Setter Property="CornerRadius" Value="30"/>
+                        <Setter Property="Background" Value="Red"/>
+                        <Setter Property="BorderThickness" Value="1"/>
+                        <Setter Property="Width" Value="20"/>
+                        <Setter Property="Height" Value="20"/>
+                        <Style.Triggers>
+                            <Trigger  Property="IsMouseOver" Value="True">
+                                <Setter Property="ToolTip" Value="{Binding ElementName=adorner, 
+                                            Path=AdornedElement.(Validation.Errors)[0].ErrorContent}"/>
+                            </Trigger>
+                        </Style.Triggers>
+                    </Style>
+                </Border.Style>
+                <TextBlock Text="!" 
+                                       TextAlignment="Center"
+                                       Foreground="White"
+                                       FontSize="18"
+                                       VerticalAlignment="Center"
+                                       HorizontalAlignment="Center">
+                </TextBlock>
+            </Border>
+            <Border BorderBrush="DarkRed" BorderThickness="1" CornerRadius="5">
+                <AdornedElementPlaceholder x:Name="adorner"/>
+            </Border>
+        </DockPanel>
+    </ControlTemplate>
+    
+    
     <Style x:Key="enterField" TargetType="{x:Type TextBox}">
         <Setter Property="FontSize" Value="22"/>
         <Setter Property="Margin" Value="10,0,10,0"/>
@@ -16,48 +50,12 @@
                         <TextBox Margin="1" Text="{Binding RelativeSource={RelativeSource TemplatedParent}, Path=Text, UpdateSourceTrigger=PropertyChanged}" 
                                  BorderThickness="0"
                                  VerticalContentAlignment="Center"
-                                 TextWrapping="Wrap"
                                  Background="{TemplateBinding Background}"/>
                     </Border>
                 </ControlTemplate>
             </Setter.Value>
         </Setter>
-        <Setter Property="Validation.ErrorTemplate">
-            <Setter.Value>
-                <ControlTemplate>
-                    <DockPanel LastChildFill="True">
-                        <Border>
-                            <Border.Style>
-                                <Style TargetType="{x:Type Border}">
-                                    <Setter Property="DockPanel.Dock" Value="Right"/>
-                                    <Setter Property="CornerRadius" Value="30"/>
-                                    <Setter Property="Background" Value="Red"/>
-                                    <Setter Property="BorderThickness" Value="1"/>
-                                    <Setter Property="Width" Value="20"/>
-                                    <Setter Property="Height" Value="20"/>
-                                    <Style.Triggers>
-                                        <Trigger  Property="IsMouseOver" Value="True">
-                                            <Setter Property="ToolTip" Value="{Binding ElementName=adorner, 
-                                            Path=AdornedElement.(Validation.Errors)[0].ErrorContent}"/>
-                                        </Trigger>
-                                    </Style.Triggers>
-                                </Style>
-                            </Border.Style>
-                            <TextBlock Text="!" 
-                                       TextAlignment="Center"
-                                       Foreground="White"
-                                       FontSize="18"
-                                       VerticalAlignment="Center"
-                                       HorizontalAlignment="Center">
-                            </TextBlock>
-                        </Border>
-                        <Border BorderBrush="DarkRed" BorderThickness="1" CornerRadius="5">
-                            <AdornedElementPlaceholder x:Name="adorner"/>
-                        </Border>
-                    </DockPanel>
-                </ControlTemplate>
-            </Setter.Value>
-        </Setter>
+        <Setter Property="Validation.ErrorTemplate" Value="{StaticResource validationTemplate}"/>
     </Style>
 
     <Style x:Key="typeMessage" TargetType="{x:Type TextBox}" >
@@ -81,6 +79,32 @@
                                  AcceptsTab="True"
                                  MaxLines="4"
                                  VerticalScrollBarVisibility="Auto"/>
+                    </Border>
+                </ControlTemplate>
+            </Setter.Value>
+        </Setter>
+    </Style>
+
+    <Style x:Key="changeSettingsField" TargetType="{x:Type TextBox}">
+        <Setter Property="VerticalAlignment" Value="Center"/>
+        <Setter Property="VerticalContentAlignment" Value="Center"/>
+        <Setter Property="Height" Value="34"/>
+        <Setter Property="Margin" Value="20,0,20,0"/>
+        <Setter Property="Validation.ErrorTemplate" Value="{StaticResource validationTemplate}"/>
+        <Setter Property="Template">
+            <Setter.Value>
+                <ControlTemplate TargetType="{x:Type TextBox}">
+                    <Border BorderBrush="Black"
+                            Background="#E5E7E9"
+                            BorderThickness="1.5" 
+                            CornerRadius="5">
+                        <TextBox Margin="1" 
+                                 Text="{Binding RelativeSource={RelativeSource TemplatedParent}, Path=Text, UpdateSourceTrigger=PropertyChanged}" 
+                                 BorderThickness="0"
+                                 VerticalContentAlignment="Center"
+                                 VerticalAlignment="Center"
+                                 TextWrapping="Wrap"
+                                 FontSize="22"/>
                     </Border>
                 </ControlTemplate>
             </Setter.Value>
