--- a/ChatClient/Views/AdditionalViews/PrivateChatView.xaml
+++ b/ChatClient/Views/AdditionalViews/PrivateChatView.xaml
@@ -23,7 +23,7 @@
 
         <GridSplitter Grid.Column="0"
                       Style="{StaticResource gridSpliiter}"/>
-        
+
         <Grid Grid.Column="0" Width="Auto">
             <Grid.RowDefinitions>
                 <RowDefinition Height="35"/>
@@ -65,15 +65,15 @@
                         <ListBox Grid.Row="0"
                              Style="{StaticResource privateUsersListBox}"
                              Name="userList">
-                        <i:Interaction.Triggers>
-                            <i:EventTrigger EventName="SelectionChanged">
-                                <i:InvokeCommandAction Command="{Binding UpdatePrivateMessagesCommand}"
+                            <i:Interaction.Triggers>
+                                <i:EventTrigger EventName="SelectionChanged">
+                                    <i:InvokeCommandAction Command="{Binding UpdatePrivateMessagesCommand}"
                                                    CommandParameter="{Binding ElementName=userList, Path=SelectedItem}"/>
-                            </i:EventTrigger>
-                        </i:Interaction.Triggers>
-                    </ListBox>
-                        </Border>
-                        <Border Grid.Row="1" BorderBrush="#AAAEB2"
+                                </i:EventTrigger>
+                            </i:Interaction.Triggers>
+                        </ListBox>
+                    </Border>
+                    <Border Grid.Row="1" BorderBrush="#AAAEB2"
                             BorderThickness="0,0,1,0">
                         <Grid Background="{StaticResource typeMessageGridColors}">
                             <Grid.ColumnDefinitions>
@@ -93,7 +93,7 @@
                                     </Ellipse.Fill>
                                 </Ellipse>
                             </Border>
-                            
+
                             <TextBlock Text="{Binding CurrentUser.UserProfile.Username}"
                                        Foreground="Black"
                                        Margin="5,0,0,0"
@@ -122,7 +122,8 @@
             <Grid.RowDefinitions>
                 <RowDefinition Height="35"/>
                 <RowDefinition/>
-                <RowDefinition Height="Auto"/>
+                <RowDefinition Height="24.768"/>
+                <RowDefinition Height="21.232"/>
             </Grid.RowDefinitions>
 
             <Grid Grid.Row="0">
@@ -148,7 +149,7 @@
 
             <Border Grid.Row="2"
                     BorderBrush="#AAAEB2"
-                    BorderThickness="0,0,1,1">
+                    BorderThickness="0,0,1,1" Grid.RowSpan="2">
                 <Grid Grid.Row="2"
                   Background="{StaticResource typeMessageGridColors}">
                     <Grid.ColumnDefinitions>
