--- a/ChatClient/Views/AdditionalViews/SettingsView.xaml
+++ b/ChatClient/Views/AdditionalViews/SettingsView.xaml
@@ -94,13 +94,8 @@
                                            Style="{StaticResource settingsInsideField}"/>
                         <Button DockPanel.Dock="Right"
                                 Style="{StaticResource changeFieldButton}"
-                                Command="{Binding ChangeUserSettingsCommand}">
-                            <Button.CommandParameter>
-                                <MultiBinding Converter="{StaticResource multiBindingConverter}">
-                                    <Binding Source="{x:Static sharedItems:ChangeSettingsType.Username}"/>
-                                </MultiBinding>
-                            </Button.CommandParameter>
-                        </Button>
+                                Command="{Binding ChangeUserSettingsCommand}"
+                                CommandParameter="{x:Static sharedItems:ChangeSettingsType.Username}"/>
                     </DockPanel>
                     <TextBlock Text="Email"
                                Style="{StaticResource settingsField}"/>
@@ -109,13 +104,8 @@
                                    Style="{StaticResource settingsInsideField}"/>
                         <Button DockPanel.Dock="Right"
                                 Style="{StaticResource changeFieldButton}"
-                                Command="{Binding ChangeUserSettingsCommand}">
-                            <Button.CommandParameter>
-                                <MultiBinding Converter="{StaticResource multiBindingConverter}">
-                                    <Binding Source="{x:Static sharedItems:ChangeSettingsType.Email}"/>
-                                </MultiBinding>
-                            </Button.CommandParameter>
-                        </Button>
+                                Command="{Binding ChangeUserSettingsCommand}"
+                                CommandParameter="{x:Static sharedItems:ChangeSettingsType.Email}"/>
                     </DockPanel>
 
                     <DockPanel Margin="0,25,0,0">
@@ -124,13 +114,8 @@
                                    Margin="5"/>
                         <Button DockPanel.Dock="Right"
                                 Style="{StaticResource changeFieldButton}"
-                                Command="{Binding ChangeUserSettingsCommand}">
-                            <Button.CommandParameter>
-                                <MultiBinding Converter="{StaticResource multiBindingConverter}">
-                                    <Binding Source="{x:Static sharedItems:ChangeSettingsType.Password}"/>
-                                </MultiBinding>
-                            </Button.CommandParameter>
-                        </Button>
+                                Command="{Binding ChangeUserSettingsCommand}"
+                                CommandParameter="{x:Static sharedItems:ChangeSettingsType.Password}"/>
                     </DockPanel>
                 </StackPanel>
             </Grid>
