--- a/ChatClient/Resources/ListBox.xaml
+++ b/ChatClient/Resources/ListBox.xaml
@@ -17,6 +17,7 @@
     <converters:MultiValueEqualityConverter x:Key="equalityConverter"/>
     <converters:ByteToImageConverter x:Key="byteToImageConverter"/>
     <converters:MessageStatusToImageConverter x:Key="messageStatusToImageConverter"/>
+    <converters:UncheckedMessagesConverter x:Key="uncheckedMessagesConverter"/>
 
     <LinearGradientBrush x:Key="mainMessageBoxColors" StartPoint="0.5,0" EndPoint="0.5,1">
         <GradientStop Color="#E6E7FF" Offset="0"/>
@@ -246,7 +247,18 @@
                         </DockPanel>
                         <!--<Image Source="{StaticResource checkedDrawingImage}"
                                Grid.Column="1"/>-->
-                        <TextBlock Text="{Binding .}"/>
+                        <TextBlock Grid.Column="1">
+                            <TextBlock.Text>
+                                <MultiBinding FallbackValue="" Converter="{StaticResource uncheckedMessagesConverter}" 
+                                              UpdateSourceTrigger="PropertyChanged">
+                                    <Binding Path="." Mode="TwoWay"/>
+                                    <Binding Path="DataContext.CurrentUser" 
+                                             RelativeSource="{RelativeSource AncestorType={x:Type UserControl}}"/>
+                                    <Binding Path="DataContext.NeedToUpdateMessagesCount" 
+                                             RelativeSource="{RelativeSource AncestorType={x:Type UserControl}}"/>
+                                </MultiBinding>
+                            </TextBlock.Text>
+                        </TextBlock><!--="{Binding ., Converter={ StaticResource uncheckedMessagesConverter}}"/>-->
                     </Grid>
                     <DataTemplate.Triggers>
                         <DataTrigger Binding="{Binding UserProfile.IsOnline}" Value="True">
