--- a/ChatClient/Views/AdditionalViews/PrivateChatView.xaml
+++ b/ChatClient/Views/AdditionalViews/PrivateChatView.xaml
@@ -7,6 +7,7 @@
              xmlns:converters="clr-namespace:ChatClient.Converters"
              xmlns:controls="clr-namespace:ChatClient.Controls"
              xmlns:additionalViews="clr-namespace:ChatClient.Views.AdditionalViews"
+             xmlns:extensions="clr-namespace:ChatClient.Extensions"
              xmlns:i="http://schemas.microsoft.com/xaml/behaviors" xmlns:viewmodels="clr-namespace:ChatClient.ViewModels" d:DataContext="{d:DesignInstance Type=viewmodels:ChatViewModel}"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="550">
@@ -122,8 +123,7 @@
             <Grid.RowDefinitions>
                 <RowDefinition Height="35"/>
                 <RowDefinition/>
-                <RowDefinition Height="24.768"/>
-                <RowDefinition Height="21.232"/>
+                <RowDefinition Height="Auto"/>
             </Grid.RowDefinitions>
 
             <Grid Grid.Row="0">
